/*
SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/hyperledger/fabric/protos/orderer";
option java_package = "org.hyperledger.fabric.protos.orderer";

package orderer;


message ConsensusTransaction {
    int64 creatorId = 1;
    bool consensus = 2;
    int64 timestamp = 3;
    int64 addressId = 4;
    int64 txSeq = 5;
    string chainID = 6;
    bytes payload = 7;
    bytes signature = 8;
    bool configMessage = 9;
}

message ConsensusResponse {
    bool accepted = 1;
}

service OrdererService {
    rpc Consensus(ConsensusTransaction) returns (ConsensusResponse) {}
}

